--- a/index.html
+++ b/index.html
@@ -8,82 +8,91 @@
 <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
-
 <div class="header">
   <h1>Welcome to Purinut Homepage!!!</h1>
 </div>
+<div class="container">
+  <div class="grid">
 
-<div class="row">
- 
-  <div class="col-3 col-s-3 menu">
-    <div class="container">
-    <ul>
-      <center><h3><b>Menu</b></h3></center>
-      <a href="My-resume.html"><li>My Resume</li></a>
-      <a href="My-showcase.html"><li>My Showcase</li></a>
-      <a href="TU-Life.html"> <li>TU Life</li></a>
-      <a href="#footer"> <li>Contact</li></a>
-    </ul>
-  </div>
-</div>
-<center>
-  <div class="col-6 col-s-9">
-    <div class="box">
-      <div class="imgwrap1">
-        <img src="./images/pic.jpg" alt="myPic" width="50% "">
+    <div class="grid-items">
+      <div class="row">
+        <div class="menu">
+          <div class="containercontent">
+            <ul>
+              <center><h3><b>Menu</b></h3></center>
+              <a href="My-resume.html"><li>My Resume</li></a>
+              <a href="My-showcase.html"><li>My Showcase</li></a>
+              <a href="TU-Life.html"> <li>TU Life</li></a>
+              <a href="#footer"> <li>Contact</li></a>
+            </ul>
+          </div>
+        </div>
       </div>
-  </div>
-    <h1>Welcome to Purinut Pages</h1>
-    <h2>Let me introduce myself</h2>
+      </div>
+
+      <div class="grid-items">
+        <div class="col-6 col-s-12">
+          <div class="box">
+            <div class="imgwrap1">
+              <img src="./images/pic.jpg" alt="myPic" style="width: 100%;">
+            </div>
+          </div>
+          <center>
+          <h1>Welcome to Purinut Pages</h1>
+    <h2>Let me introduce myself</h2></center>
     <div class="block">
+      <center>
       <P>Purinut Sukdee (Rew)</P>
       <P>6409610695</P>
       <P>Department of Computer Science</P>
       <P>Faculty of Science and Technology</P>
       <P>Thammasat University (Year 3th)</P> 
-    
-  </div></center>
-
-  <div class="col-3 col-s-12">
-    <div class="container">
-      <center>
-      <p >This is the homepage of Purinut Pages, where you can find 
-        information about my resume, showcase, TU-Life, and contact details. 
-        Feel free to explore the different sections using the menu buttons.</p></center>
+    </center>
+          </div>
+        </div>
+      </div>
+      <div class="grid-items">
+        <div class="col-3 col-s-12">
+          <div class="containercontent">
+            <center>
+              <p>This is the homepage of Purinut Pages, where you can find 
+                information about my resume, showcase, TU-Life, and contact details. 
+                Feel free to explore the different sections using the menu buttons.</p>
+            </center>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
 <!-- footer -->
 <div id="footer" class="footer">
-  <div class="row">
-    <div class="col-4">
-      <div>
-      <h2>Contact Me</h2>
+  <div class="grid">
+    <div class="grid-items">
+        <div>
+          <h2>Contact Me</h2>
       <h4>555/111 Latkrabang Bangkok 10520</h4>
       <h4>Tel. 095-555-5555</h4>     
+        </div>
     </div>
-  </div> <!-- 25% -->
 
-    <div class="col-4">
-      <div>
-      <h3 style="margin-left: 40px;">Social media</h3>
-      <ul>
-          <img src="./images/facebook-icon.png"style="width:60px">
-          <h4>Rew Purinut</h4>
-          <img src="./images/Instagram_icon.png"style="width:40px">
-          <h4>rew_na_jas</h4>
-      </ul>
-  </div>
-  </div> 
-<div class="col-4">
-  <h4>Email</h4>
-      <h4>Purinut.suk@dome.tu.ac.th</h4>
-      <h4>or</h4>
-      <h4>purinutsukdee@gmail.com</h4>
- </div>
-  </div>     
-</div>
+    <div class="grid-items">
+          <h3>Social media</h3>
+          <ul>
+            <img src="./images/facebook-icon.png" style="width: 60px">
+            <h4>Rew Purinut</h4>
+            <img src="./images/Instagram_icon.png" style="width: 40px">
+            <h4>rew_na_jas</h4>
+          </ul>
+        </div>
+      <div class="grid-items">
+          <h4>Email</h4>
+          <h4>Purinut.suk@dome.tu.ac.th</h4>
+          <h4>or</h4>
+          <h4>purinutsukdee@gmail.com</h4>
+      </div>
+    </div>
 <!-- end of footer -->
 
 
