--- a/My-resume.html
+++ b/My-resume.html
@@ -12,20 +12,23 @@
 <div class="header">
   <h1>Welcome to Purinut My Resume page</h1>
 </div>
-
-<div class="row">
- 
-  <div class="col-3 col-s-3 menu">
-    <div class="container">
-    <ul>
-      <center><h3><b>Menu</b></h3></center>
-      <a href="index.html"><li>Homepage</li></a>
-      <a href="My-showcase.html"><li>My Showcase</li></a>
-      <a href="TU-Life.html"> <li>TU Life</li></a>
-      <a href="#footer"> <li>Contact</li></a>
-    </ul>
+<div class="container">
+<div class="grid">
+<div class="grid-items">
+  <div class="row">
+    <div class="menu">
+      <div class="containercontent">
+        <ul>
+          <center><h3><b>Menu</b></h3></center>
+          <a href="My-resume.html"><li>My Resume</li></a>
+          <a href="My-showcase.html"><li>My Showcase</li></a>
+          <a href="TU-Life.html"> <li>TU Life</li></a>
+          <a href="#footer"> <li>Contact</li></a>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
+  </div>
 <center>
   <div class="col-6 col-s-9">
     <div class="box">
@@ -35,8 +38,9 @@
   </div>
   </div></center>
 
-  <div class="col-3 col-s-12">
-    <div class="container">
+  <div class="grid-items" style="margin-left: 100px;">
+    <div class="col-3 col-s-12">
+      <div class="containercontent">
       <center>
       <p >นี่คือ Resume ล่าสุดของผม</p>
       <p >โดยมีตำแหน่งที่สนใจคือ
@@ -48,11 +52,13 @@
     </div>
   </div>
 </div>
+</div>
+</div>
 
 <!-- footer -->
 <div id="footer" class="footer">
-  <div class="row">
-    <div class="col-4">
+  <div class="grid">
+    <div class="grid-items">
       <div>
       <h2>Contact Me</h2>
       <h4>555/111 Latkrabang Bangkok 10520</h4>
