--- a/TU-Life.html
+++ b/TU-Life.html
@@ -12,11 +12,12 @@
 <div class="header">
   <h1>Welcome to My TU-Life</h1>
 </div>
-
-<div class="row">
- 
-  <div class="col-3 col-s-3 menu">
-    <div class="container">
+<div class="container">
+  <div class="grid">
+  <div class="grid-items">
+    <div class="row">
+      <div class="menu">
+        <div class="containercontent">
     <ul>
       <center><h3><b>Menu</b></h3></center>
       <a href="index.html"><li>Homepage</li></a>
@@ -25,6 +26,8 @@
       <a href="#footer"> <li>Contact</li></a>
     </ul>
   </div>
+</div>
+</div>
 </div>
 <center>
   <div class="col-6 col-s-9">
@@ -62,8 +65,9 @@
     </div>
   </div></center>
   <!-- description -->
-  <div class="col-3 col-s-12">
-    <div class="container">
+  <div class="grid-items" style="margin-left: 50px;">
+    <div class="col-3 col-s-12">
+      <div class="containercontent">
       <center>
       <p >เรื่องราวชีวิตในมหาลัย</p>
       <p >ผมอาศัยอยู่ใน หอใน ของมหาวิทยาลัย ชีวิตที่นี่ค่อนข้างอิสระ ตื่นเช้ามา ลงไปกินข้าที่โรงอาหารใกล้ๆ บริเวณรอบๆค่อนข้างปลอดภัย
@@ -77,40 +81,37 @@
     </div>
   </div>
 </div>
-
+</div>
+</div>
+</div>
 <!-- footer -->
 <div id="footer" class="footer">
-  <div class="row">
-    <div class="col-4">
-      <div>
-      <h2>Contact Me</h2>
+  <div class="grid">
+    <div class="grid-items">
+        <div>
+          <h2>Contact Me</h2>
       <h4>555/111 Latkrabang Bangkok 10520</h4>
       <h4>Tel. 095-555-5555</h4>     
+        </div>
     </div>
-  </div> <!-- 25% -->
 
-    <div class="col-4">
-      <div>
-      <h3 style="margin-left: 40px;">Social media</h3>
-      <ul>
-          <img src="./images/facebook-icon.png"style="width:60px">
-          <h4>Rew Purinut</h4>
-          <img src="./images/Instagram_icon.png"style="width:40px">
-          <h4>rew_na_jas</h4>
-      </ul>
-  </div>
-  </div> 
-<div class="col-4">
-  <h4>Email</h4>
-      <h4>Purinut.suk@dome.tu.ac.th</h4>
-      <h4>or</h4>
-      <h4>purinutsukdee@gmail.com</h4>
- </div>
-  </div>     
-</div>
+    <div class="grid-items">
+          <h3>Social media</h3>
+          <ul>
+            <img src="./images/facebook-icon.png" style="width: 60px">
+            <h4>Rew Purinut</h4>
+            <img src="./images/Instagram_icon.png" style="width: 40px">
+            <h4>rew_na_jas</h4>
+          </ul>
+        </div>
+      <div class="grid-items">
+          <h4>Email</h4>
+          <h4>Purinut.suk@dome.tu.ac.th</h4>
+          <h4>or</h4>
+          <h4>purinutsukdee@gmail.com</h4>
+      </div>
+    </div>
 <!-- end of footer -->
-
-
 </body>
 </html>
 
